--- a/02_Regions/Kanto.html
+++ b/02_Regions/Kanto.html
@@ -163,17 +163,13 @@
 
 <body>
   <div class="tablecontainer">
-    <audio id="player" src="../src/assets/bgm/1-40. Goldenrod City.mp3" autoplay controls loop
+    <audio id="player" src="../src/assets/bgm/1-40. Goldenrod City.mp3" autoplay loop
       onloadstart="this.volume=0.15"></audio>
-    <img class="pikaoko" src="../src/assets/gif/pikagif.gif" alt="" />
-    <img class="redstand" src="../src/assets/gif/redgif.gif" alt="" />
-    <img class="greenstand" src="../src/assets/gif/greengif.gif" alt="" />
-    <img class="bluestand" src="../src/assets/gif/bluegif2.gif" alt="" />
-    <img class="jamman" src="../src/assets/gif/jammangif.gif" alt="" />
+
 
     <div class="manholetable">
       <h1>간토</h1>
-      <h5>&nbsp;55%</h5>
+      <h5>&nbsp;100%</h5>
       <table class="manholetableline">
         <tr>
           <th>토치기</th>
@@ -203,8 +199,8 @@
         <tr>
           <th>도쿄</th>
           <td colspan="6">
-            <a href="../03.manholecity/manholecity_Tokyo.html"><img
-                src="../src/assets/hole/Kanto/Tokyo/machida1/machida1_l.png" alt="" width="" />
+            <a href="../03_City/Kanto_Tokyo.html"><img src="../src/assets/hole/Kanto/Tokyo/machida1/machida1_l.png"
+                alt="" width="" />
               <img src="../src/assets/hole/Kanto/Tokyo/machida2/machida2_l.png" alt="" width="" />
               <img src="../src/assets/hole/Kanto/Tokyo/machida3/machida3_l.png" alt="" width="" />
               <img src="../src/assets/hole/Kanto/Tokyo/machida4/machida4_l.png" alt="" width="" />
@@ -239,6 +235,12 @@
       </table>
     </div>
   </div>
+  <div class="cursor">
+    <link rel="stylesheet" href="../06_/Cursor/cursor.css">
+    <script src="../06_/Cursor/cursor.js"></script>
+    <img src="../src/assets/gif/pokeball.gif" style="width: 5%;">
+  </div>
+  <script src="tilt.js"></script>
 </body>
 
 </html>
